<resources>
    <string name="app_name">Keto Kodex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="calculator">Calculator</string>
    <string name="add">Add</string>
    <string name="custom">Custom</string>
    <string name="addCustomFood">Add Custom Food</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="menu">Menu</string>
    <string name="food">Food</string>
    <string name="restaurants">Restaurants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email</string>
    <string name="register">Register</string>
    <string name="or">- OR -</string>
    <string name="signed_out">Signed Out!</string>
    <string name="signed_in">Signed In!</string>
    <string name="error_google_sign_in">Error with Google sign in.</string>
    <string name="caps_ok">OK</string>
    <string name="password_reset_message">If an account exists for the specified email, you should receive an email shortly to reset your password.</string>
    <string name="password_reset_title">Password Reset Sent</string>
    <string name="password_reset_blank_email_message">Please enter an email address.</string>
    <string name="unknown">Unknown</string>
    <string name="add_food_please_sign_in">Please sign in to add custom foods</string>
    <string name="favorites_please_sign_in">Please sign in to use favorites</string>
    <string name="no_results_found">No results found</string>
    <string name="food_added_successfully">Food added successfully</string>
    <string name="valid_food_error">Please enter a valid food name</string>
    <string name="valid_calorie_error">Please enter a valid calorie count</string>
    <string name="valid_carb_error">Please enter a valid carb count</string>
    <string name="valid_protein_error">Please enter a valid protein count</string>
    <string name="valid_fat_error">Please enter a valid fat count</string>
    <string name="no_email_found">No email address found</string>
    <string name="age_error_one">Please enter age</string>
    <string name="age_error_two">Please enter valid age</string>
    <string name="weight_error_one">Please enter weight</string>
    <string name="weight_error_two">Please enter valid weight</string>
    <string name="height_error_one">Please enter height</string>
    <string name="height_error_two">Please enter valid height</string>
    <string name="sign_in_success">Signed In Successfully</string>
    <string name="user_creation_success">User created successfully</string>
    <string name="password_required">Password required</string>
    <string name="email_required">Email address required</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="error_removing_from_favorites">Error removing from favorites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="keto_favorites">Keto Favorites</string>
    <string name="name">Name</string>
    <string name="add_custom_food">Add Custom Food</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="kilos">Kilos</string>
    <string name="height">Height</string>
    <string name="inches">Inches</string>
    <string name="cm">CM</string>
    <string name="activity_level">Activity Level</string>
    <string name="calculate">Calculate</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="basal_metabolic_rate">Basal Metabolic Rate (BMR)</string>
    <string name="sedentary">Sedentary (Little or no exercise)</string>
    <string name="lightly_active">Lightly Active (1–3 workouts/week)</string>
    <string name="moderately_active">Moderately Active (3–5 workouts/week)</string>
    <string name="very_active">Very Active (6–7 workouts/week)</string>
    <string name="extra_active">Extra Active (Physical Job and 6–7 workouts/week)</string>
    <string name="restaurant_map_fab_content_description">Button to launch Google maps and search for selected restaurant</string>
    <string name="food_favorite_fab_content_description">Button to add and remove food from favorites</string>
    <string name="calculate_calorie_content_description">Button to calculate daily calorie needs</string>
    <string name="add_custom_food_content_description">Button to add new custom food</string>
    <string name="sign_out_button_content_description">Sign out button</string>
    <string name="sign_in_button_content_description">Sign in button</string>
    <string name="google_sign_in_content_description">Google sign in button</string>
    <string name="register_button_content_description">Register button</string>
</resources>
