<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_drawer_top_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_baseline_fastfood"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_add"
            android:title="@string/add" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_insert_chart_outlined"
            android:title="@string/calculator" />
    </group>

    <group
        android:id="@+id/nav_drawer_bottom_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/ic_baseline_account_circle"
            android:title="@string/sign_in" />
    </group>

</menu>
